refactor: 서비스에서 response 반환하도록 수정